[gd_scene load_steps=10 format=2]

[ext_resource path="res://botones/exit.png" type="Texture" id=1]
[ext_resource path="res://particulas/fond.jpg" type="Texture" id=2]
[ext_resource path="res://botones/restar.png" type="Texture" id=3]
[ext_resource path="res://Font/AlexBrush-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://botones/Sound.png" type="Texture" id=5]
[ext_resource path="res://Pausa.gd" type="Script" id=6]
[ext_resource path="res://botones/SoundPress.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 10
outline_color = Color( 0.152941, 0.0509804, 0.0509804, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 5
outline_color = Color( 0.152941, 0.105882, 0.105882, 1 )
font_data = ExtResource( 4 )

[node name="Pausa" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -467.0
margin_top = -325.5
margin_right = 467.0
margin_bottom = 325.5
custom_constants/margin_right = 180
custom_constants/margin_top = 80
custom_constants/margin_left = 180
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="NinePatchRect" parent="margin"]
margin_left = 180.0
margin_top = 80.0
margin_right = 754.0
margin_bottom = 571.0
texture = ExtResource( 2 )

[node name="centro" type="CenterContainer" parent="margin"]
margin_left = 180.0
margin_top = 80.0
margin_right = 754.0
margin_bottom = 571.0

[node name="botones" type="VBoxContainer" parent="margin/centro"]
margin_left = 67.0
margin_top = 32.0
margin_right = 507.0
margin_bottom = 458.0
alignment = 1

[node name="titulo" type="Label" parent="margin/centro/botones"]
margin_right = 440.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 1 )
text = "PAUSA"
align = 1

[node name="txt_sonido" type="Label" parent="margin/centro/botones"]
margin_top = 80.0
margin_right = 440.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 2 )
text = "Sonido"
align = 1

[node name="sonido" type="TextureButton" parent="margin/centro/botones"]
margin_top = 122.0
margin_right = 440.0
margin_bottom = 272.0
rect_min_size = Vector2( 170, 150 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="margin/centro/botones"]
margin_top = 276.0
margin_right = 440.0
margin_bottom = 426.0
custom_constants/separation = 100

[node name="reiniciar" type="TextureButton" parent="margin/centro/botones/HBoxContainer"]
margin_right = 170.0
margin_bottom = 150.0
rect_min_size = Vector2( 170, 150 )
texture_normal = ExtResource( 3 )
expand = true

[node name="salir" type="TextureButton" parent="margin/centro/botones/HBoxContainer"]
margin_left = 270.0
margin_right = 440.0
margin_bottom = 150.0
rect_min_size = Vector2( 170, 100 )
texture_normal = ExtResource( 1 )
expand = true
[connection signal="pressed" from="margin/centro/botones/sonido" to="." method="_on_sonido_pressed"]
[connection signal="pressed" from="margin/centro/botones/HBoxContainer/reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="margin/centro/botones/HBoxContainer/salir" to="." method="_on_salir_pressed"]
